<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/fase1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        style="@style/linerlayout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fase1_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Titles"
            android:text="@string/fase1" />

        <TextView
            android:id="@+id/crono1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/chronometer"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fase2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fase1_layout"
        style="@style/linerlayout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fase2_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Titles"
            android:text="@string/fase2" />

        <TextView
            android:id="@+id/crono2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/chronometer"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fase3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fase2_layout"
        style="@style/linerlayout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fase3_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Titles"
            android:text="@string/fase3" />

        <TextView
            android:id="@+id/crono3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/chronometer"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fase4_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linerlayout"
        android:layout_below="@id/fase3_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fase4_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Titles"
            android:text="@string/fase4" />

        <TextView
            android:id="@+id/crono4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/chronometer"/>

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/fase4_layout"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:text="@string/button_text_start"
        android:onClick="start"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:text="@string/reset_button_text"
        android:onClick="resetTimers"/>
</LinearLayout>

</RelativeLayout>